k8s_deployment_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  namespace: wiztest
spec:
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP  # Change to LoadBalancer if needed
